fixes overflow en mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,7 @@ body {
   position: relative;
   overflow-x: hidden;
   max-width: 100vw;
+  margin: 0;
 }
 @media (min-width: 768px) {
   body {
@@ -256,6 +257,12 @@ section {
   .pink-bg {
     right: -15px;
   }
+}
+
+.bg {
+  position: relative;
+  overflow: hidden;
+  margin: 0;
 }
 
 .text-wrapper {
