--- a/scss/_background.scss
+++ b/scss/_background.scss
@@ -34,3 +34,9 @@
         right: -15px;
     }
 }
+
+.bg{
+    position: relative;
+    overflow: hidden;
+    margin: 0;
+}
