--- a/scss/_global-styles.scss
+++ b/scss/_global-styles.scss
@@ -4,6 +4,7 @@ body{
     position: relative;
     overflow-x: hidden;
     max-width: 100vw;
+    margin: 0;
     @media (min-width: 768px){
         max-height: 100vh;
         overflow-y: hidden;
